--- a/RockPaperScissorLizardSpock/RockPaperScissorLizardSpock.csproj
+++ b/RockPaperScissorLizardSpock/RockPaperScissorLizardSpock.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AIPlayer.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="HumanPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RPSLS.cs" />
